# pacparser

./: .gitignore  .hgignore  .travis.yml  CLAUDE.md  CNAME  Dockerfile  INSTALL  Makefile  Makefile.win32  README  README.md  README.win32  README.win32.md  README_SM  SECURITY.md  appveyor.yml  compile_commands.json  index.html  pac_builtins.h  pac_utils.h  package  package_excludes  pacparser.c  pacparser.h  pacparser_utils.h  pactester.c  pactester_dns_test.sh  pactester_nointernet_test.sh  pactester_test_lib.sh  params.json  sonar-project.properties
debian/: changelog  control  copyright  docs  libpacparser-dev.install  libpacparser.install  libpacparser1.install  pactester.install  python-pacparser.install  rules
docs/: doxygen.config  pacparser_cleanup.3  pacparser_enable_microsoft_extensions.3  pacparser_find_proxy.3  pacparser_init.3  pacparser_just_find_proxy.3  pacparser_parse_pac.3  pacparser_parse_pac_file.3  pacparser_parse_pac_string.3  pacparser_setmyip.3  pactester.1  rman.sh
examples/: fetchurl.py  pactest.c  pactest.py
pymod/: Makefile  Makefile.win32  __init__.py  pacparser_py.c  setup.py  setup_win32.py
rust_ffi/: .gitignore  Cargo.toml  Makefile  build.rs  includes.h
rust_ffi/libs/: js.lib  legacy_stdio_definitions.lib  pacparser.lib
rust_ffi/src/: bindings.rs  lib.rs  main.rs
spidermonkey/: Makefile  Makefile.win32  install_sm.sh
src/: .gitignore  Makefile  Makefile.win32  Makefile.win64-static  duk_config.h  duktape.c  duktape.h  pac_utils.h  pac_utils.js  pac_utils_dump.c  pac_utils_test.c  pacparse.c  pacparser.c  pacparser.h  util.c  (+8 more)
(+81 files in other folders)
