[package]
name = "pacparser"
version = "0.1.0"
authors = ["Saman Tehrani <saman@preveil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
clap = { git = "https://github.com/clap-rs/clap" }

[build-dependencies]
bindgen = "0.53.2"


[lib]
name = "pacparser"

[[bin]]
name = "pacparser"
